--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "test": "plasmo test"
   },
   "dependencies": {
+    "@lmdb/lmdb-darwin-x64": "^2.8.4",
     "@plasmohq/storage": "^1.7.2",
     "jquery": "^3.7.0",
+    "nanoid": "^4.0.2",
     "plasmo": "0.82.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "uuid": "^9.0.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@parcel/watcher": "^2.2.0",
     "@types/chrome": "0.0.241",
     "@types/jquery": "^3.5.16",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "@types/uuid": "^9.0.2",
     "prettier": "3.0.0",
     "typescript": "5.1.6"
   },
